--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "p-limit": "^7.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
