--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test:chaos:all": "npm run test:chaos:retry && npm run test:chaos:backoff"
   },
   "dependencies": {
-    "@mediapipe/tasks-vision": "^0.10.32",
     "@supabase/supabase-js": "^2.77.0",
+    "face-api.js": "^0.22.2",
     "openai": "^6.7.0",
     "p-limit": "^7.2.0",
     "react": "^19.1.1",
